<resources>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="more_string">+%1$s</string>
    <string name="copy_email">Copy email address</string>
    <string name="copy_number">Copy phone number</string>
    <string name="done">Return</string>
    <string name="add_account">Add account</string>
    <string name="manage_accounts">Manage accounts</string>
    <string name="sign_in">Sign in</string>
    <string name="show_account_list">Show accounts</string>
    <string name="hide_account_list">Hide accounts</string>
    <string name="account_item">Switch to %1$s</string>
    <string name="selected_account">Signed in to %1$s</string>
    <string name="account_list">Account list</string>
    <string name="photo_view_count" formatted="false">%d of %d</string>
    <string name="retry">Retry</string>
    <string name="failed">"Couldn't load image"</string>
    <string name="recurrence_dialog_title">Repeat</string>
    <string name="recurrence_dialog_title_never">Never repeats</string>
    <string name="recurrence_month_pattern_by_day">on the same day each month</string>
    <string name="recurrence_month_pattern_last_day">on the last day of the month</string>
    <string name="acessibility_recurrence_choose_end_date_description">change end date</string>
    <string name="save_label">Done</string>
    <string name="recurrence_end_continously">Forever</string>
    <string name="recurrence_end_date_label">Until a date</string>
    <string name="recurrence_end_date">Until %s</string>
    <string name="recurrence_end_count_label">For a number of events</string>
    <string name="endByDate">; until %s</string>
    <string name="every_weekday">Every weekday (Mon–Fri)</string>
    <string name="every_weekday_lower">every weekday (Mon–Fri)</string>
    <string name="weekly_simple">Weekly</string>
    <string name="weekly_simple_lower">weekly</string>
    <string name="hint_time_zone_search">Type country name</string>
    <string name="searchview_description_clear">Clear query</string>
    <string name="no_results_found">No results found</string>
    <string name="palestine_display_name">Palestine</string>
    <string name="done_label">Done</string>
    <string name="hour_picker_description">Hours circular slider</string>
    <string name="minute_picker_description">Minutes circular slider</string>
    <string name="select_hours">Select hours</string>
    <string name="select_minutes">Select minutes</string>
    <string name="day_picker_description">Month grid of days</string>
    <string name="year_picker_description">Year list</string>
    <string name="debug_tool_send_database_title">Send database</string>
    <string name="fab_expand_content_description">Add a note</string>
    <string name="menu_new_note">New note</string>
    <string name="menu_new_list">New list</string>
    <string name="menu_new_recording">New recording</string>
    <string name="menu_new_picture">New photo note</string>
    <string name="menu_add_picture">Add picture</string>
    <string name="menu_switch_to_list_view">Single-column view</string>
    <string name="menu_switch_to_grid_view">Multi-column view</string>
    <string name="menu_search">Search</string>
    <string name="menu_sync">Refresh</string>
    <string name="menu_empty_trash">Empty Trash</string>
    <string name="menu_clone">Make a copy</string>
    <string name="menu_send">Send</string>
    <string name="menu_copy_to_docs">Copy to Google Doc</string>
    <string name="menu_list_settings">List settings</string>
    <string name="menu_archive">Archive</string>
    <string name="menu_add_reminder">Add reminder</string>
    <string name="menu_unarchive">Unarchive</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_rename_label">Rename label</string>
    <string name="menu_delete_label">Delete label</string>
    <string name="menu_restore">Restore</string>
    <string name="menu_confirm">OK</string>
    <string name="menu_show_checkboxes">Show checkboxes</string>
    <string name="menu_hide_checkboxes">Hide checkboxes</string>
    <string name="menu_show_extracted_text">Grab image text</string>
    <string name="menu_reset_list">Uncheck all items</string>
    <string name="menu_delete_checked">Delete checked items</string>
    <string name="filter_type_list_note_hint">Filter by lists</string>
    <string name="filter_type_audio_note_hint">Filter by notes with audio</string>
    <string name="filter_type_photo_note_hint">Filter by notes with images</string>
    <string name="filter_type_reminder_note_hint">Filter by notes with reminders</string>
    <string name="filter_type_shared_note_hint">Filter by shared notes</string>
    <string name="filter_type_color_hint">Filter by note color</string>
    <string name="account_sync_off">Sync is off. Turn sync back on to make sure all your changes are saved.</string>
    <string name="enable_account_sync_action">Turn on sync</string>
    <string name="dismiss_sync_off_action">Dismiss</string>
    <string name="drawer_landing_page_label">Labels</string>
    <string name="color_picker_content_description">Change color</string>
    <string name="list_settings_title">List settings</string>
    <string name="list_settings_checked_items_policy_title">Checked items</string>
    <string name="list_settings_checked_items_stay_in_place">Stay in place</string>
    <string name="list_settings_checked_items_move_to_bottom">Move to bottom</string>
    <string name="list_settings_new_list_item_position_title">Add new list items</string>
    <string name="list_settings_new_list_item_top">Top</string>
    <string name="list_settings_new_list_item_bottom">Bottom</string>
    <string name="list_settings_apply_to_new_lists">Apply to new lists</string>
    <string name="whats_new_in_keep">What’s new in Keep</string>
    <string name="whats_new_title">Labels &amp; recurring reminders</string>
    <string name="whats_new_description">Add labels to your notes! From your daily to-dos to new sources of inspiration, Keep can help you stay organized. Set up recurring reminders to never miss a beat.</string>
    <string name="welcome_card_got_it">GOT IT</string>
    <string name="welcome_card_got_it_description">got it</string>
    <string name="cancel">Cancel</string>
    <string name="sharing_action_bar_content_description">Share</string>
    <string name="drawer_label_header_button_text">EDIT</string>
    <string name="drawer_label_header_button_content_description">Edit button</string>
    <string name="create_new_label_edit_mode">Create new label</string>
    <string name="menu_change_labels">Change labels</string>
</resources>