<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_material_sharing_addperson_light" android:id="@id/menu_add_sharees" android:title="@string/sharing_action_bar_content_description" app:showAsAction="always" />
    <item android:icon="@drawable/ic_material_color_light" android:id="@id/color_picker" android:title="@string/color_picker_content_description" app:showAsAction="always" />
    <item android:icon="@drawable/ic_label_light" android:id="@id/menu_change_labels" android:title="@string/menu_change_labels" app:showAsAction="always" />
    <item android:icon="@drawable/ic_material_camera_light" android:id="@id/menu_add_picture" android:title="@string/menu_add_picture" app:showAsAction="always" />
    <item android:icon="@drawable/ic_material_archive_light" android:id="@id/menu_archive" android:title="@string/menu_archive" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_material_unarchive_light" android:id="@id/menu_unarchive" android:title="@string/menu_unarchive" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_material_untrash_light" android:id="@id/menu_restore" android:title="@string/menu_restore" app:showAsAction="always" />
    <item android:icon="@drawable/ic_material_trash_light" android:id="@id/menu_delete" android:title="@string/menu_delete" app:showAsAction="ifRoom" />
    <item android:id="@id/menu_clone" android:title="@string/menu_clone" />
    <item android:id="@id/menu_send" android:title="@string/menu_send" />
    <item android:id="@id/menu_show_extracted_text" android:title="@string/menu_show_extracted_text" />
    <item android:id="@id/menu_reset_list" android:title="@string/menu_reset_list" />
    <item android:id="@id/menu_delete_checked" android:title="@string/menu_delete_checked" />
    <item android:id="@id/menu_show_checkboxes" android:title="@string/menu_show_checkboxes" />
    <item android:id="@id/menu_hide_checkboxes" android:title="@string/menu_hide_checkboxes" />
    <item android:id="@id/menu_list_settings" android:title="@string/menu_list_settings" />
    <item android:id="@id/menu_copy_to_doc" android:title="@string/menu_copy_to_docs" />
</menu>