<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_material_reminder_finger_light" android:id="@id/menu_add_reminder" android:title="@string/menu_add_reminder" app:showAsAction="always" />
    <item android:icon="@drawable/ic_material_color_light" android:id="@id/menu_color_picker" android:title="@string/color_picker_content_description" app:showAsAction="always" />
    <item android:icon="@drawable/ic_label_light" android:id="@id/menu_change_labels" android:title="@string/menu_change_labels" app:showAsAction="always" />
    <item android:icon="@drawable/ic_material_archive_light" android:id="@id/menu_archive" android:title="@string/menu_archive" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_material_unarchive_light" android:id="@id/menu_unarchive" android:title="@string/menu_unarchive" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_material_untrash_light" android:id="@id/menu_restore" android:title="@string/menu_restore" app:showAsAction="always|withText" />
    <item android:id="@id/menu_delete" android:title="@string/menu_delete" app:showAsAction="never" />
    <item android:id="@id/menu_clone" android:title="@string/menu_clone" app:showAsAction="never" />
    <item android:id="@id/menu_send" android:title="@string/menu_send" app:showAsAction="never" />
    <item android:id="@id/menu_copy_to_doc" android:title="@string/menu_copy_to_docs" app:showAsAction="never" />
</menu>