<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_material_search_light" android:id="@id/search" android:title="@string/menu_search" app:showAsAction="always" />
    <item android:icon="@drawable/ic_view_stream" android:id="@id/menu_switch_to_list_view" android:title="@string/menu_switch_to_list_view" app:showAsAction="always" />
    <item android:icon="@drawable/ic_view_grid" android:id="@id/menu_switch_to_grid_view" android:title="@string/menu_switch_to_grid_view" app:showAsAction="always" />
    <item android:id="@id/menu_rename_label" android:title="@string/menu_rename_label" app:showAsAction="never" />
    <item android:id="@id/menu_delete_label" android:title="@string/menu_delete_label" app:showAsAction="never" />
    <item android:id="@id/menu_empty_trash" android:title="@string/menu_empty_trash" app:showAsAction="never" />
    <item android:id="@id/menu_sync" android:title="@string/menu_sync" app:showAsAction="never" />
    <item android:id="@id/menu_send_database" android:title="@string/debug_tool_send_database_title" app:showAsAction="never" />
</menu>