<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:id="@id/label_header" android:background="@color/sliding_drawer_background_color" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/drawer_horizontal_divider" />
    <FrameLayout android:clickable="false" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/drawer_landing_page_label" style="@style/DrawerHeaderItemTextStyle" />
        <TextView android:id="@id/drawer_label_header_button" android:background="?selectableItemBackgroundBorderless" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/drawer_label_header_button_text" android:contentDescription="@string/drawer_label_header_button_content_description" style="@style/DrawerHeaderTextActionButtonStyle" />
    </FrameLayout>
</LinearLayout>