<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/BannerLayoutStyle.SyncIsOff"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/sync_is_off_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/account_sync_off" style="@style/BannerTextStyle" />
    <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_gravity="center_vertical" android:id="@id/action_dismiss" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/dismiss_sync_off_action" android:layout_weight="0.6" android:contentDescription="@string/dismiss_sync_off_action" style="@style/SyncOffBannerActionTextStyle" />
        <TextView android:layout_gravity="center_vertical" android:id="@id/action_turn_sync_on" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/enable_account_sync_action" android:layout_weight="0.4" android:contentDescription="@string/enable_account_sync_action" style="@style/SyncOffBannerActionTextStyle" />
    </LinearLayout>
</LinearLayout>