<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:id="@id/expanded_header" android:background="@drawable/note_shadow_widget" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:gravity="center" android:id="@id/new_note_button" android:background="@drawable/background_with_pressed_state" android:padding="@dimen/widget_header_button_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_material_note_dark" android:layout_weight="1.0" android:contentDescription="@string/menu_new_note" />
        <ImageView android:gravity="center" android:id="@id/new_list_button" android:background="@drawable/background_with_pressed_state" android:padding="@dimen/widget_header_button_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_material_list_dark" android:layout_weight="1.0" android:contentDescription="@string/menu_new_list" />
        <ImageView android:gravity="center" android:id="@id/new_audio_note_button" android:background="@drawable/background_with_pressed_state" android:padding="@dimen/widget_header_button_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_material_mic_dark" android:layout_weight="1.0" android:contentDescription="@string/menu_new_recording" />
        <ImageView android:gravity="center" android:id="@id/new_photo_note_button" android:background="@drawable/background_with_pressed_state" android:padding="@dimen/widget_header_button_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_material_camera_dark" android:layout_weight="1.0" android:contentDescription="@string/menu_new_picture" />
    </LinearLayout>
    <TextView android:id="@id/account_name_expanded" android:background="@color/widget_header_account_background_color" style="@style/WidgetAccountNameTextStyle" />
</LinearLayout>