<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:gravity="center_vertical" android:id="@id/label_editor_create_label_root" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/label_editor_entry_min_height"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/create_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_material_add_blue" android:contentDescription="@string/create_new_label_edit_mode" style="@style/LabelEditorIcon" />
    <ImageView android:id="@id/cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_material_delete_dark" android:contentDescription="@string/cancel" android:alpha="0.7" style="@style/LabelEditorIcon" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <EditText android:id="@id/input_text" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/create_new_label_edit_mode" style="@style/LabelEditorEntryEditText" />
        <TextView android:id="@id/error" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" style="@style/LabelEditorErrorText" />
    </LinearLayout>
    <ImageView android:id="@id/confirm_create" android:background="?selectableItemBackgroundBorderless" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_done_blue" android:contentDescription="@string/menu_confirm" style="@style/LabelEditorEntryAction" />
    <View android:id="@id/divider_top" android:background="@color/default_divider_color" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <View android:layout_gravity="bottom" android:id="@id/divider_bottom" android:background="@color/default_divider_color" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="1.0dip" />
</FrameLayout>